# data-engineering-zoomcamp-2026

./: README.md  pyproject.toml
1.docker-terraform/: docker-README.md
1.docker-terraform/homework1_docker_sql/: homework.md
1.docker-terraform/pipeline/: README.md  docker-compose.yaml
1.docker-terraform/pipeline_test/: requirements.txt  uv_list.txt
1.docker-terraform/terraform-workshop/: .terraform.lock.hcl
1.docker-terraform/test/: README.md
2.kestra-workshop/: README.md
2.kestra-workshop/workflow-orchestration/: .gitignore  docker-compose.yaml
2.kestra-workshop/workflow-orchestration/flows/: 01_hello_world.yaml  02_python.py  02_python.yaml  03_getting_started_with_data_pipeline.yaml  04_postgres_taxi.yaml  05_postgres_taxi_scheduled.yaml  06_gcp_kv.yaml  07_gcp_setup.yaml  homework_pgsql
3-data-warehouse/: Bigquerydemo-dezoomcamp.sql  README.md  ShellScript-Copy  big_query_ml.sql  curl_command_test  ml_model_export_docker
4-analytics-engineering/: .gitignore  ShellScript-Copy  analytics-engineering-dbt.sql  cloud_setup_README.md  docker-compose.yaml  local_setup_README.md
4-analytics-engineering/taxi_rides_ny/: README.md  dbt_project.yml  packages.yml
4-analytics-engineering/taxi_rides_ny/macros/: get_vendor_names.sql
4-analytics-engineering/taxi_rides_ny/models/marts/: dim_locations.sql  dim_vendors.sql  fct_trips.sql
4-analytics-engineering/taxi_rides_ny/models/staging/: bigquery_sources.yml  duckdb_sources.yml  (+2 more)
4-analytics-engineering/taxi_rides_ny/tests/: singular_tests.sql
SQL-refresher/: README.md
pipeline/: Dockerfile
(+1 files in other folders)
