[project]
name = "data-engineering-zoomcamp-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "dbt-bigquery>=1.11.1",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.4.4",
    "kestra>=1.2.0",
    "pandas>=3.0.1",
    "pgcli>=4.3.0",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.47",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pgcli>=4.3.0",
]

